# ptcg-agent-sol

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  actions.py  base.py  cards.py  evaluator.py  greedy_agent.py  mcts_agent.py  observation.py  planner.py  random_agent.py  rng.py  rule_policy.py
artifacts/: sot-1890-deck-shortlist.json
configs/: cpu.toml  gpu-3080ti.toml
configs/experiments/: zero-sol-v1.json
docs/: kaggle-submission.md  zero-sol-gpu-experiment.md
eval/: agent_server.py  battle_vs.py  run_common_match.py
eval/hash_baseline/: main.py
scripts/: build_submission.sh  setup_engine.sh
src/ptcg_agent/: __init__.py  adapter.py  agent.py  cli.py  config.py  deck_preselection.py  policy.py  runtime_dataset.py  training.py
tests/: support.py  test_battle_policy.py  test_cli.py  test_deck_preselection.py  test_runtime_dataset.py  test_semantic_policy.py  test_submission.py
