[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ptcg-agent-sol"
version = "0.1.0"
description = "Reproducible local PTCG AI challenge workspace"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.11", "pytest>=8.3", "ruff>=0.7"]
kaggle = ["kaggle>=1.6"]

[project.scripts]
ptcg-agent = "ptcg_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
